add test visualization codes in run script

--- a/plot_prediction.ipynb
+++ b/plot_prediction.ipynb
@@ -47,15 +47,8 @@
     "args.n_features = len(set(DataConfig.static_reals+DataConfig.observed_reals+DataConfig.targets))\n",
     "args.n_targets = len(DataConfig.targets)\n",
     "\n",
-    "args.enc_in = args.n_features\n",
-    "# args.dec_in = args.c_out = args.n_targets = len(DataConfig.targets)\n",
-    "\n",
-    "args.mode = 2\n",
-    "if args.mode == 1:\n",
-    "    args.dec_in = args.c_out = args.n_targets = len(DataConfig.targets)\n",
-    "else:\n",
-    "    args.dec_in = args.c_out = args.n_features\n",
-    "    args.n_targets = len(DataConfig.targets)"
+    "args.enc_in = args.dec_in = args.c_out = args.n_features\n",
+    "args.n_targets = len(DataConfig.targets)    "
    ]
   },
   {
