update training scripts

--- a/interpret_tft.ipynb
+++ b/interpret_tft.ipynb
@@ -16,9 +16,9 @@
     "from utils.utils import seed_torch, get_best_model_path\n",
     "from dataclasses import dataclass\n",
     "from pytorch_forecasting import TemporalFusionTransformer\n",
-    "from experiment.tft import Experiment_TFT\n",
+    "from exp.tft import Experiment_TFT\n",
     "from explainers import *\n",
-    "from experiment.config import Split, FeatureFiles\n",
+    "from exp.config import Split, FeatureFiles\n",
     "from utils.interpreter import *\n",
     "from utils.plotter import PlotResults\n",
     "\n",
