Add Autoformer, Fedformer, PatchTST and TimesNet (#14)
* add Autoformer, Fedformer, PatchTST and TimesNet

* add test visualization codes in run script

* update training scripts

--- a/plot_prediction.ipynb
+++ b/plot_prediction.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from utils.plotter import PlotResults\n",
+    "from utils.tools import align_predictions\n",
     "from run import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "argv = \"\"\"\n",
     "--is_training --use_gpu \n",
     "--result_path scratch\n",
-    "--data_path Top_20.csv \n",
+    "--data_path Top_100.csv \n",
     "--model Transformer --scale\n",
     "\"\"\".split()\n",
     "parser = get_parser()\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +47,13 @@
     "args.n_features = len(set(DataConfig.static_reals+DataConfig.observed_reals+DataConfig.targets))\n",
     "args.n_targets = len(DataConfig.targets)\n",
     "\n",
-    "args.enc_in = args.n_features\n",
-    "# args.dec_in = args.c_out = args.n_targets = len(DataConfig.targets)\n",
-    "\n",
-    "args.mode = 2\n",
-    "if args.mode == 1:\n",
-    "    args.dec_in = args.c_out = args.n_targets = len(DataConfig.targets)\n",
-    "else:\n",
-    "    args.dec_in = args.c_out = args.n_features\n",
-    "    args.n_targets = len(DataConfig.targets)"
+    "args.enc_in = args.dec_in = args.c_out = args.n_features\n",
+    "args.n_targets = len(DataConfig.targets)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +62,7 @@
      "text": [
       "Use GPU: cuda:0\n",
       "\n",
-      "Train samples 12740, validation samples 560, test samples 560\n",
+      "Train samples 63700, validation samples 2800, test samples 2800\n",
       "637 days of training, 14 days of validation data, 14 days of test data.\n",
       "\n",
       "Fitting scalers on train data\n"
@@ -86,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -95,28 +89,10 @@
      "text": [
       "Time encoded columns : ['month', 'day', 'weekday']\n",
       "Getting valid sampling locations.\n",
-      "loading best model from scratch\\Transformer_Top_20_scale_True_mode_2\\checkpoint.pth\n",
-      "Preds and Trues shape: (20, 14, 1) (20, 14, 1)\n"
+      "loading best model from scratch\\Transformer_Top_100_scale_True_mode_2\\checkpoint.pth\n",
+      "Preds and Trues shape: (100, 14, 1) (100, 14, 1)\n"
      ]
-    }
-   ],
-   "source": [
-    "flag = 'val'\n",
-    "\n",
-    "if flag == 'train': df = exp.train_data\n",
-    "elif flag == 'val': df = exp.val_data\n",
-    "elif flag == 'test': df = exp.test_data\n",
-    "else: raise NotImplementedError\n",
-    "\n",
-    "preds, trues, predictions_index = exp.pred(load_model=True, flag=flag, return_index=True)\n",
-    "predictions_index[exp.age_data.time_index] += args.pred_len + df[exp.age_data.time_index].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -148,27 +124,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-11-28</td>\n",
+       "      <td>2021-12-12</td>\n",
        "      <td>2261</td>\n",
-       "      <td>637</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>651</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>94.498413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-11-29</td>\n",
+       "      <td>2021-12-13</td>\n",
        "      <td>2261</td>\n",
-       "      <td>638</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>652</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>127.520584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-11-30</td>\n",
+       "      <td>2021-12-14</td>\n",
        "      <td>2261</td>\n",
-       "      <td>639</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>653</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>110.635696</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,18 +152,26 @@
       ],
       "text/plain": [
        "        Date  FIPS  TimeFromStart  Cases  Predicted_Cases\n",
-       "0 2021-11-28  2261            637    1.0              0.0\n",
-       "1 2021-11-29  2261            638    2.0              0.0\n",
-       "2 2021-11-30  2261            639    1.0              0.0"
+       "0 2021-12-12  2261            651    0.0        94.498413\n",
+       "1 2021-12-13  2261            652    0.0       127.520584\n",
+       "2 2021-12-14  2261            653    0.0       110.635696"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from utils.utils import align_predictions\n",
+    "flag = 'test'\n",
+    "\n",
+    "if flag == 'train': df = exp.train_data\n",
+    "elif flag == 'val': df = exp.val_data\n",
+    "elif flag == 'test': df = exp.test_data\n",
+    "else: raise NotImplementedError\n",
+    "\n",
+    "preds, trues, predictions_index = exp.pred(load_model=True, flag=flag, return_index=True)\n",
+    "predictions_index[exp.age_data.time_index] += args.pred_len + df[exp.age_data.time_index].min()\n",
     "\n",
     "pred_list = [\n",
     "    preds[:, :, target] for target in range(preds.shape[-1])\n",
@@ -202,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -235,77 +219,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>280.000000</td>\n",
-       "      <td>280.000000</td>\n",
-       "      <td>280.000000</td>\n",
-       "      <td>280.000000</td>\n",
+       "      <td>62300.00000</td>\n",
+       "      <td>62300.000000</td>\n",
+       "      <td>62300.000000</td>\n",
+       "      <td>62300.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>22995.050000</td>\n",
-       "      <td>643.500000</td>\n",
-       "      <td>628.057143</td>\n",
-       "      <td>721.968994</td>\n",
+       "      <td>25826.55000</td>\n",
+       "      <td>325.000000</td>\n",
+       "      <td>286.210578</td>\n",
+       "      <td>283.813995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>18281.790462</td>\n",
-       "      <td>4.038347</td>\n",
-       "      <td>998.972938</td>\n",
-       "      <td>577.650269</td>\n",
+       "      <td>15937.12053</td>\n",
+       "      <td>179.845821</td>\n",
+       "      <td>614.938618</td>\n",
+       "      <td>450.233612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2261.000000</td>\n",
-       "      <td>637.000000</td>\n",
+       "      <td>2261.00000</td>\n",
+       "      <td>14.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>6069.500000</td>\n",
-       "      <td>640.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>501.858711</td>\n",
+       "      <td>12026.00000</td>\n",
+       "      <td>169.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>101.911423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>14558.500000</td>\n",
-       "      <td>643.500000</td>\n",
-       "      <td>244.500000</td>\n",
-       "      <td>628.400208</td>\n",
+       "      <td>25023.00000</td>\n",
+       "      <td>325.000000</td>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>156.658493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>39068.000000</td>\n",
-       "      <td>647.000000</td>\n",
-       "      <td>738.000000</td>\n",
-       "      <td>709.880127</td>\n",
+       "      <td>39038.50000</td>\n",
+       "      <td>481.000000</td>\n",
+       "      <td>318.000000</td>\n",
+       "      <td>282.544960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>53033.000000</td>\n",
-       "      <td>650.000000</td>\n",
-       "      <td>8176.000000</td>\n",
-       "      <td>3929.081543</td>\n",
+       "      <td>55079.00000</td>\n",
+       "      <td>636.000000</td>\n",
+       "      <td>22286.000000</td>\n",
+       "      <td>9580.916992</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               FIPS  TimeFromStart        Cases  Predicted_Cases\n",
-       "count    280.000000     280.000000   280.000000       280.000000\n",
-       "mean   22995.050000     643.500000   628.057143       721.968994\n",
-       "std    18281.790462       4.038347   998.972938       577.650269\n",
-       "min     2261.000000     637.000000     0.000000         0.000000\n",
-       "25%     6069.500000     640.000000     0.000000       501.858711\n",
-       "50%    14558.500000     643.500000   244.500000       628.400208\n",
-       "75%    39068.000000     647.000000   738.000000       709.880127\n",
-       "max    53033.000000     650.000000  8176.000000      3929.081543"
+       "              FIPS  TimeFromStart         Cases  Predicted_Cases\n",
+       "count  62300.00000   62300.000000  62300.000000     62300.000000\n",
+       "mean   25826.55000     325.000000    286.210578       283.813995\n",
+       "std    15937.12053     179.845821    614.938618       450.233612\n",
+       "min     2261.00000      14.000000      0.000000         0.000000\n",
+       "25%    12026.00000     169.000000     36.000000       101.911423\n",
+       "50%    25023.00000     325.000000    122.000000       156.658493\n",
+       "75%    39038.50000     481.000000    318.000000       282.544960\n",
+       "max    55079.00000     636.000000  22286.000000      9580.916992"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target Cases: MAE 590.92, RMSE 882.35, RMSLE 3.4187, NNSE 0.56368.\n",
+      "Target Cases: MAE 522.18, RMSE 992.94, RMSLE 3.3357, NNSE 0.5701.\n",
       "\n"
      ]
     }
