remove ModelConfig and refactor TFT argparser. Add PatchTST

--- a/interpret_tft.ipynb
+++ b/interpret_tft.ipynb
@@ -36,7 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from run_tft import get_argparser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -48,16 +57,14 @@
     }
    ],
    "source": [
-    "@dataclass\n",
-    "class args:\n",
-    "    result_folder = 'scratch/no_scale/' # 'results/Top_100'\n",
-    "    input_folder = 'dataset/processed/'\n",
-    "    input = 'Top_20.csv'\n",
-    "    explainer = 'FO'\n",
-    "    \n",
-    "    disable_progress = False\n",
-    "    seed = 7\n",
-    "    \n",
+    "argv = \"\"\"\n",
+    "--result_path scratch/no_scale\n",
+    "--data_path Top_20.csv\n",
+    "--test\n",
+    "\"\"\".split()\n",
+    "args = get_argparser().parse_args(argv)\n",
+    "\n",
+    "args.explainer = 'FO'\n",
     "seed_torch(args.seed)"
    ]
   },
@@ -70,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +97,13 @@
       "\n",
       "Train samples 12740, validation samples 560, test samples 560\n",
       "637 days of training, 14 days of validation data, 14 days of test data.\n",
-      "\n"
+      "\n",
+      "Fitting scalers on train data\n"
      ]
     }
    ],
    "source": [
-    "data_path = os.path.join(args.input_folder, args.input)\n",
-    "experiment = Experiment_TFT(\n",
-    "    data_path, args.result_folder, not args.disable_progress\n",
-    ")\n",
+    "experiment = Experiment_TFT(args)\n",
     "\n",
     "total_data = experiment.age_dataloader.read_df()\n",
     "print(total_data.shape)\n",
@@ -118,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader = experiment.age_dataloader\n",
-    "time_index = dataloader.time_index\n",
-    "features = dataloader.static_reals"
+    "age_data = experiment.age_dataloader\n",
+    "time_index = age_data.time_index\n",
+    "features = age_data.static_reals"
    ]
   },
   {
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -153,20 +158,10 @@
       "\n",
       "Found best checkpoint model best-epoch=5.ckpt.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mi3se\\AppData\\Roaming\\Python\\Python310\\site-packages\\pytorch_lightning\\utilities\\parsing.py:262: UserWarning: Attribute 'loss' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['loss'])`.\n",
-      "  rank_zero_warn(\n",
-      "C:\\Users\\mi3se\\AppData\\Roaming\\Python\\Python310\\site-packages\\pytorch_lightning\\utilities\\parsing.py:262: UserWarning: Attribute 'logging_metrics' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['logging_metrics'])`.\n",
-      "  rank_zero_warn(\n"
-     ]
     }
    ],
    "source": [
-    "model_path = get_best_model_path(args.result_folder)\n",
+    "model_path = get_best_model_path(args.result_path)\n",
     "model = TemporalFusionTransformer.load_from_checkpoint(model_path)"
    ]
   },
@@ -179,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +186,271 @@
    "metadata": {},
    "source": [
     "## Calculate Importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset, dataloader = experiment.age_dataloader.create_timeseries(data)\n",
+    "# (x, (y, _)) = next(iter(dataloader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tuple of prediction, x, index\n",
+    "predictions, x, test_index = model.predict(\n",
+    "    dataloader, return_index=True, return_x=True\n",
+    ")\n",
+    "# since this is single target\n",
+    "predictions, trues = predictions[0], x['decoder_target'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trues_numpy = np.float64(trues.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = predictions.detach().cpu().numpy()\n",
+    "trues = trues.detach().cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_upscaled = age_data.upscale_target(predictions)\n",
+    "trues_upscaled = age_data.upscale_target(trues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.5174602 , -0.48869577, -0.4597846 , ..., -0.43869594,\n",
+       "        -0.48208186, -0.48430225],\n",
+       "       [-0.49500653, -0.4602807 , -0.44890168, ..., -0.48420146,\n",
+       "        -0.48578826, -0.4832596 ],\n",
+       "       [-0.46145996, -0.4464108 , -0.4648368 , ..., -0.48466858,\n",
+       "        -0.48244557, -0.4361967 ],\n",
+       "       ...,\n",
+       "       [-0.12029567, -0.47700384, -0.5361868 , ..., -0.13433173,\n",
+       "        -0.14126739, -0.14640132],\n",
+       "       [-0.44303522, -0.51592684,  0.14833173, ..., -0.1320912 ,\n",
+       "        -0.13371685, -0.13393745],\n",
+       "       [-0.43093857,  0.03964522, -0.13726178, ..., -0.14728943,\n",
+       "        -0.14735565, -0.38925532]], dtype=float32)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12200, 14)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.53725553, -0.53725553, -0.53725553, -0.53725553, -0.53725553,\n",
+       "       -0.53725553, -0.53725553, -0.53725553, -0.53725553, -0.53725553,\n",
+       "       -0.53725553, -0.53725553, -0.53725553, -0.53725553])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trues_numpy[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trues_upscaled = age_data.upscale_target(trues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.     ,   0.     ,   0.     , ...,   0.     ,   0.     ,\n",
+       "          0.     ],\n",
+       "       [  0.     ,   0.     ,   0.     , ...,   0.     ,   0.     ,\n",
+       "          0.     ],\n",
+       "       [  0.     ,   0.     ,   0.     , ...,   0.     ,   0.     ,\n",
+       "          0.     ],\n",
+       "       ...,\n",
+       "       [696.     ,   0.     ,   0.     , ..., 128.99997, 155.     ,\n",
+       "          0.     ],\n",
+       "       [  0.     ,   0.     , 858.     , ..., 155.     ,   0.     ,\n",
+       "          0.     ],\n",
+       "       [  0.     , 858.     , 159.     , ...,   0.     ,   0.     ,\n",
+       "          0.     ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trues_upscaled[trues_upscaled<0] = 0\n",
+    "trues_upscaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 23.765467,  58.298973,  93.00869 , ..., 118.32693 ,  66.2394  ,\n",
+       "         63.573692],\n",
+       "       [ 50.722557,  92.41311 , 106.0743  , ...,  63.694725,  61.789635,\n",
+       "         64.82546 ],\n",
+       "       [ 90.99728 , 109.06472 ,  86.9432  , ...,  63.133873,  65.80276 ,\n",
+       "        121.327415],\n",
+       "       ...,\n",
+       "       [500.5863  ,  72.3359  ,   1.283044, ..., 483.73514 , 475.40845 ,\n",
+       "        469.24484 ],\n",
+       "       [113.11733 ,  25.60641 , 823.0903  , ..., 486.42505 , 484.47333 ,\n",
+       "        484.2085  ],\n",
+       "       [127.6401  , 692.60535 , 480.21744 , ..., 468.17862 , 468.09912 ,\n",
+       "        177.68347 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_upscaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[-0.5373, -0.5373, -0.5373,  ..., -0.5373, -0.5373, -0.5373],\n",
+       "         [-0.5373, -0.5373, -0.5373,  ..., -0.5373, -0.5373, -0.5373],\n",
+       "         [-0.5373, -0.5373, -0.5373,  ..., -0.5373, -0.5373, -0.5373],\n",
+       "         ...,\n",
+       "         [ 0.0425, -0.5373, -0.5373,  ..., -0.4298, -0.4081, -0.5373],\n",
+       "         [-0.5373, -0.5373,  0.1774,  ..., -0.4081, -0.5373, -0.5373],\n",
+       "         [-0.5373,  0.1774, -0.4048,  ..., -0.5373, -0.5373, -0.5373]])]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([12200, 14])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[0][0].shape, pred[1]['decoder_target'][0].shape"
    ]
   },
   {
