add interpretion script and morris sensitivity

--- a/plot_prediction.ipynb
+++ b/plot_prediction.ipynb
@@ -20,35 +20,14 @@
    "outputs": [],
    "source": [
     "argv = \"\"\"\n",
-    "--is_training --use_gpu \n",
+    "--is_training \n",
     "--result_path scratch\n",
     "--data_path Top_100.csv \n",
     "--model Transformer --scale\n",
     "\"\"\".split()\n",
     "parser = get_parser()\n",
-    "args = parser.parse_args(argv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set_random_seed(args.seed)\n",
-    "args.use_gpu = True if torch.cuda.is_available() and args.use_gpu else False\n",
-    "\n",
-    "if args.use_gpu and args.use_multi_gpu:\n",
-    "    args.devices = args.devices.replace(' ', '')\n",
-    "    device_ids = args.devices.split(',')\n",
-    "    args.device_ids = [int(id_) for id_ in device_ids]\n",
-    "    args.gpu = args.device_ids[0]\n",
-    "    \n",
-    "args.n_features = len(set(DataConfig.static_reals+DataConfig.observed_reals+DataConfig.targets))\n",
-    "args.n_targets = len(DataConfig.targets)\n",
-    "\n",
-    "args.enc_in = args.dec_in = args.c_out = args.n_features\n",
-    "args.n_targets = len(DataConfig.targets)    "
+    "args = parser.parse_args(argv)\n",
+    "initial_setup(args)"
    ]
   },
   {
