--- a/plot_prediction.ipynb
+++ b/plot_prediction.ipynb
@@ -20,10 +20,9 @@
    "outputs": [],
    "source": [
     "argv = \"\"\"\n",
-    "--is_training \n",
     "--result_path scratch\n",
     "--data_path Top_100.csv \n",
-    "--model Transformer --scale\n",
+    "--model Transformer --test\n",
     "\"\"\".split()\n",
     "parser = get_parser()\n",
     "args = parser.parse_args(argv)\n",
