add black box evaluation of interpretation

--- a/interpret.ipynb
+++ b/interpret.ipynb
@@ -131,8 +131,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flag = 'train'\n",
-    "dataset, dataloader = exp.get_data(flag)"
+    "flag = 'test'\n",
+    "dataset, dataloader = exp.get_data(flag)\n",
+    "df = exp.data_map[flag]\n",
+    "df.sort_values(by=['Date', 'FIPS'], inplace=True)\n",
+    "df.head(3)"
    ]
   },
   {
@@ -150,141 +153,12 @@
    ],
    "source": [
     "explainer = FeatureAblation(model)\n",
-    "attr = batch_compute_attr(dataloader, exp, explainer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>UNDER5</th>\n",
-       "      <th>AGE517</th>\n",
-       "      <th>AGE1829</th>\n",
-       "      <th>AGE3039</th>\n",
-       "      <th>AGE4049</th>\n",
-       "      <th>AGE5064</th>\n",
-       "      <th>AGE6574</th>\n",
-       "      <th>AGE75PLUS</th>\n",
-       "      <th>VaccinationFull</th>\n",
-       "      <th>Cases</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>TimeFromStart</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>746</th>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>2261</td>\n",
-       "      <td>0.0062</td>\n",
-       "      <td>0.0160</td>\n",
-       "      <td>0.0140</td>\n",
-       "      <td>0.0146</td>\n",
-       "      <td>0.0117</td>\n",
-       "      <td>0.0235</td>\n",
-       "      <td>0.0103</td>\n",
-       "      <td>0.0004</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1782</th>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>4013</td>\n",
-       "      <td>0.0601</td>\n",
-       "      <td>0.1717</td>\n",
-       "      <td>0.1678</td>\n",
-       "      <td>0.1392</td>\n",
-       "      <td>0.1254</td>\n",
-       "      <td>0.1771</td>\n",
-       "      <td>0.0912</td>\n",
-       "      <td>0.0675</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2818</th>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>6037</td>\n",
-       "      <td>0.0560</td>\n",
-       "      <td>0.1558</td>\n",
-       "      <td>0.1738</td>\n",
-       "      <td>0.1525</td>\n",
-       "      <td>0.1311</td>\n",
-       "      <td>0.1865</td>\n",
-       "      <td>0.0826</td>\n",
-       "      <td>0.0617</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date  FIPS  UNDER5  AGE517  AGE1829  AGE3039  AGE4049  AGE5064  \\\n",
-       "746  2020-03-01  2261  0.0062  0.0160   0.0140   0.0146   0.0117   0.0235   \n",
-       "1782 2020-03-01  4013  0.0601  0.1717   0.1678   0.1392   0.1254   0.1771   \n",
-       "2818 2020-03-01  6037  0.0560  0.1558   0.1738   0.1525   0.1311   0.1865   \n",
-       "\n",
-       "      AGE6574  AGE75PLUS  VaccinationFull  Cases  month  day  weekday  \\\n",
-       "746    0.0103     0.0004              0.0    0.0      3    1        6   \n",
-       "1782   0.0912     0.0675              0.0    1.0      3    1        6   \n",
-       "2818   0.0826     0.0617              0.0  130.0      3    1        6   \n",
-       "\n",
-       "      TimeFromStart  \n",
-       "746               0  \n",
-       "1782              0  \n",
-       "2818              0  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = exp.data_map[flag]\n",
-    "df.sort_values(by=['Date', 'FIPS'], inplace=True)\n",
-    "df.head(3)"
+    "attr = batch_compute_attr(dataloader, exp, explainer)\n",
+    "\n",
+    "# batch x pred_len x seq_len x features -> batch x pred_len x features\n",
+    "attr = attr.mean(axis=2)\n",
+    "# batch x features x pred_len\n",
+    "attr = attr.permute(0, 2, 1)"
    ]
   },
   {
