fix attr saving

--- a/interpret.ipynb
+++ b/interpret.ipynb
@@ -153,7 +153,7 @@
    ],
    "source": [
     "explainer = FeatureAblation(model)\n",
-    "attr = batch_compute_attr(dataloader, exp, explainer)\n",
+    "attr = batch_compute_attr(dataloader, exp, explainer, include_x_mark=False)\n",
     "\n",
     "# batch x pred_len x seq_len x features -> batch x pred_len x features\n",
     "attr = attr.mean(axis=2)\n",
@@ -225,7 +225,6 @@
    ],
    "source": [
     "attr_numpy = attr.detach().cpu().numpy()\n",
-    "np.save(os.path.join(exp.output_folder, f'{flag}_{explainer.get_name()}.npy'), attr_numpy)\n",
     "# taking absolute since we want the magnitude of feature importance only\n",
     "attr_numpy  = np.abs(attr_numpy)\n",
     "\n",
