--- a/interpret.ipynb
+++ b/interpret.ipynb
@@ -153,7 +153,7 @@
    ],
    "source": [
     "explainer = FeatureAblation(model)\n",
-    "attr = batch_compute_attr(dataloader, exp, explainer, include_x_mark=False)\n",
+    "attr = batch_compute_attr(dataloader, exp, explainer, add_x_mark=False)\n",
     "\n",
     "# batch x pred_len x seq_len x features -> batch x pred_len x features\n",
     "attr = attr.mean(axis=2)\n",
