add fedformer top 100 results

--- a/plot_comparison.ipynb
+++ b/plot_comparison.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "age_data = AgeData.build(args)\n",
     "total_data = age_data.read_df()\n",
-    "train, val, test = age_data.split_data(\n",
+    "train, val, test, _ = age_data.split_data(\n",
     "    total_data, Split.primary()\n",
     ")"
    ]
