move align_prediction

--- a/plot_comparison.ipynb
+++ b/plot_comparison.ipynb
@@ -16,7 +16,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from utils.plotter import PlotResults\n",
-    "from utils.tools import align_predictions\n",
+    "from utils.utils import align_predictions\n",
     "from run import *"
    ]
   },
