--- a/plot_interpretation.ipynb
+++ b/plot_interpretation.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from utils.plotter import PlotResults\n",
-    "from utils.tools import align_predictions"
+    "from utils.utils import align_predictions"
    ]
   },
   {
