fix cache conflict for different data percent

--- a/plot_interpretation.ipynb
+++ b/plot_interpretation.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "flag = 'test'\n",
     "dataset_root = os.path.join(DataConfig.root_folder, args.data_path.split('.')[0])\n",
-    "path = os.path.join(dataset_root, f'{flag}.pt')\n",
+    "path = os.path.join(dataset_root, f'{flag}_percent_{args.percent}.pt')\n",
     "ts_dataset = None\n",
     "if os.path.exists(path):\n",
     "    print(f'Loading dataset from {path}')\n",
